<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/newCaseScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarNewTypeActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorToolbar">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/backArrowNewCase"
                    android:layout_width="23dp"
                    android:layout_height="29dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorToolbar"
                    android:src="@drawable/ic_baseline_arrow_back_24px"
                    android:tint="@color/colorTextWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/new_case"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/buttonBackNewTypeActivity"
                    app:layout_constraintStart_toEndOf="@+id/backArrowNewCase"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>


            <ImageButton
                android:id="@+id/btnAddCase"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginEnd="4dp"
                android:background="@color/colorToolbar"
                android:contentDescription="@string/new_type"
                android:src="@drawable/ic_baseline_done_24px"
                android:tint="@color/colorTextWhite" />
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarNewTypeActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/welome_add_type_nameTv"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/etNewCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/new_case_hint_name"
                android:maxLength="20"
                android:maxLines="1">

                <requestFocus />
            </EditText>

        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>